# glibc

./: ChangeLog  INSTALL  Makeconfig  Makefile  Makerules  NEWS  SHARED-FILES  config.h.in  config.make.in  configure  configure.ac  libc-abis  project.config
advisories/: GLIBC-SA-2026-0005  GLIBC-SA-2026-0006  GLIBC-SA-2026-0007
bits/: fcntl.h  in.h  param.h  poll.h  sem.h  signum-generic.h  signum.h  sockaddr.h  socket.h  syslog-path.h  ucontext.h  utmp.h  utmpx.h  wordsize.h
csu/: init-first.c  libc-start.c  libc-tls.c  static-reloc.c
ctype/: ctype.h
debug/: backtrace.c  tst-chk1.c  wcpcpy_chk.c
dirent/: Makefile  dirent.h
dlfcn/: Makefile  dlfcn.h  modstatic2.c  tststatic2.c
elf/: Makefile  cache.c  dl-audit.c  dl-cache.c  dl-close.c  dl-conflict.c  dl-execstack-ovrd.c  dl-fini.c  dl-hwcaps-subdirs.c  dl-hwcaps.c  dl-hwcaps.h  dl-load.c  dl-lookup.c  dl-main.h  dl-minimal.c  dl-noexecstack.c  dl-object.c  dl-open.c  dl-reloc-static-pie.c  dl-reloc.c  dl-runtime.c  dl-scope.c  dl-support.c  dl-sym.c  dl-sysdep.c  dl-tls.c  dl-tls_init_tp.c  dl-tunables.c  dl-tunables.h  dl-usage.c  do-rel.h  dynamic-link.h  elf.h  get-dynamic-info.h  ldconfig-parse.c  ldconfig.c  link.h  rtld.c  setup-vdso.h  stringtable.c  (+10 more)
gmon/: tst-sprofil.c
grp/: grp.h  initgroups.c
gshadow/: gshadow.h
htl/: Makefile  Versions  pt-alloc.c  pt-create.c
hurd/: hurdsig.c  report-wait.c
iconv/: gconv.h  iconv.h  loop.c  skeleton.c
include/: aio.h  array_length.h  link.h  (+13 more)
sysdeps/ia64/: configure  configure.ac  dl-machine.h  ieee754.h
sysdeps/ia64/nptl/: tcb-offsets.sym
(+1319 files in other folders)
